syntax = "proto3";

package promo;

service PromoCodeService {
	rpc AddPromoCode (AddPromoCode) returns (PromoCode) {}
	rpc RemovePromoCode (RemovePromoCode) returns (PromoCodeBoolResponse) {}
	rpc IsPromoCodeValid (PromoCodeName) returns (PromoCodeBoolResponse) {}
	rpc MarkPromoCodeAsUsed (PromoCodeName) returns (PromoCodeBoolResponse) {}
	rpc GetListOfPromocodes (PageOptions) returns (PromoCodeList) {}
	rpc IsPromoCodeExist (PromoCodeName) returns (PromoCodeBoolResponse) {}
}
    
message PromoCode {
	string id = 1;
	string createdAt = 2;
	string name = 3;
	int32 percent = 4;
	string currentState = 5;
	bool isOneTime = 6;
	string usedDate = 7;
	string startDate = 8;
	string endDate = 9;
	string deletedAt = 10;
	string deletedReason = 11;
}
    
message AddPromoCode {
	string name = 1;
	int32 percent = 2;
	bool isOneTime = 3;
	string startDate = 4;
	string endDate = 5;
}
    
message PromoCodeName {
	string name = 1;
}

message RemovePromoCode {
	string name = 1;
	string deletedReason = 2;
}

message PromoCodeBoolResponse {
	bool response = 1;
}

message PromoCodeList {
	repeated PromoCode promocodes = 1;
}

message PageOptions {
	int32 page = 1;
	int32 limit = 2;
}
  